<resources>
    <string name="app_name">USEA APP</string>
    <string name="NA">N/A</string>
    <string name="school_name_kh">សាកលវិទ្យាល័យ សៅស៍អុីសថ៍អេយសៀ</string>
    <string name="school_name_en">University Of South-East Asia</string>
    <string name="welcome">Welcome!!!</string>
    <string name="hello_blank_fragment">Blank Fragment</string>
    <string name="hello">សួស្តី</string>
    <string name="Sample_txt">XXX</string>
    <string name="Assignment">កិច្ចការក្រុម</string>
    <string name="Registration_question">question</string>
    <string name="Registration_answer">answer</string>
    <string name="Subject">មុខវិជ្ជា</string>
    <string name="Due_Date">ផុតកំណត់</string>
    <string name="Create_By">បង្កើតដោយ</string>
    <string name="Homework">កិច្ចការផ្ទះ</string>
    <string name="Midterm">ប្រឡងពាក់កណ្តាលឆមាស</string>
    <string name="Exam_date">កាលបរិច្ឆេទប្រឡង</string>
    <string name="Time">ម៉ោង</string>
    <string name="Start_time">ម៉ោងចាប់ផ្តើមៈ</string>
    <string name="Room">បន្ទប់</string>
    <string name="sign_in_as">ចូលតាម:</string>
    <string name="Student">និស្សិត</string>
    <string name="Events">ព្រឹត្តិការណ៍</string>
    <string name="Scholarship">អាហារូបកណ៍</string>
    <string name="Career">ព័ត៌មានការងារ</string>
    <string name="News">ព័ត៌មានថ្មីៗ</string>
    <string name="More">បន្ថែម</string>
    <string name="Home">ទំព័រដើម</string>
    <string name="FAQ">សំណួរគេសួរញឹកញាប់</string>
    <string name="About_Us">អំពីយើង</string>
    <string name="Follow_Us">តាមយើង</string>
    <string name="Location">ទីតាំង</string>
    <string name="Account">គណនី</string>
    <string name="guest">ភ្ញៀវ</string>
    <string name="Hour">ម៉ោង</string>
    <string name="Permission">ការអនុញ្ញាត</string>
    <string name="Absent">អវត្តមាន</string>
    <string name="Come">វត្តមាន</string>
    <string name="Attendance">វត្តមាន</string>
    <string name="How_would_you_rate_your_experience_using_this_app">តើអ្នកនឹងវាយតម្លៃបទពិសោធន៍របស់អ្នកយ៉ាងដូចម្តេច?</string>
    <string name="Help_us_by_describing_your_problem">សូមជួយពិពណ៌នាអំពីបញ្ហារបស់អ្នក!</string>
    <string name="Write_your_thought">សូមសរសេរមតិយោបល់របស់អ្នកនៅទីនេះ</string>
    <string name="Optional">(Optional)</string>
    <string name="Do_you_have_any_screenshot">តើអ្នកមានរូបដែលទាក់ទងនឹងបញ្ហាដែរឬទេ?</string>
    <string name="Add_Photo">Add Photo</string>
    <string name="Submit_Feedback">បញ្ចូន</string>
    <string name="Feedback">មតិកែលម្អ</string>
    <string name="Studyplan">ផែនការសិក្សា</string>
    <string name="Semester1">ឆមាសទី ១</string>
    <string name="Credit">ក្រេឌីត</string>
    <string name="Semester2">ឆមាសទី ២</string>
    <string name="Semester3">ឆមាសទី ៣</string>
    <string name="select_thesis_type">សូមជ្រើសរើសកម្មវិធីសិក្សា</string>
    <string name="thesis">កម្មវិធីអប់រំសម្រាប់ការសរសេរនិក្ខេបបទ</string>
    <string name="nonthesis">កម្មវិធីអប់រំសម្រាប់ការប្រឡងបញ្ចប់ការសិក្សា</string>
    <string name="Major">ជំនាញ</string>
    <string name="Promotion">ជំនាន់</string>
    <string name="Academic">ឆ្នាំមូលដ្ឋាន</string>
    <string name="About_Me">អំពីខ្ញុំ</string>
    <string name="Shift">វេនសិក្សា</string>
    <string name="Date_of_birth">ថ្ងៃកំណើត</string>
    <string name="Phone_Number">លេខទូរស័ព្ទ</string>
    <string name="Setting">ការកំណត់</string>
    <string name="StudentInformation">ព័ត៌មានលម្អិតរបស់សិស្ស</string>
    <string name="StudentName">ឈ្មោះនិស្សិត</string>
    <string name="StudentID">អត្ថលេខនិស្សិត</string>
    <string name="StudentAccount">គណនីនិស្សិត</string>
    <string name="student">និស្សិត</string>
    <string name="Law">ច្បាប់</string>
    <string name="Policy">គោលការណ៍</string>
    <string name="About">អំពីយើង</string>
    <string name="Log_out">ចាកចេញ</string>
    <string name="password">លេខសម្ងាត់និស្សិត</string>
    <string name="Log_In">ចូល</string>
    <string name="Legal">គោលការណ៍</string>
    <string name="AboutDetail">"សាកលវិទ្យាល័យ សៅស៍អ៊ីសថ៍អេយសៀត្រូវបានបង្កើតឡើងនៅថ្ងៃទី ៧ ខែកក្កដា ឆ្នាំ ២០០៦ ដោយម្ចាស់ភាគហ៊ុនជនជាតិខ្មែរចំនួន ៤ រូបឆ្លើយតប នឹងកម្មវិធីអភិវឌ្ឍវិស័យអប់រំរបស់រដ្ឋាភិបាលដើម្បីកសាងនិងពង្រឹងធនធានមនុស្សតាមរយៈវិស័យអប់រំឧត្តមសិក្សា ។សាកលវិទ្យាល័យមានទីតាំង នៅ ក្នុងខេត្តសៀមរាបប្រទេសកម្ពុជានិងមានចំងាយប្រហែល ៣១៤ គីឡូ មែត្រ ពីភ្នំពេញដែលជា រាជធានីនៃប្រទេសកម្ពុជា ។ខេត្តសៀមរាបគឺជាតំបន់ សេដ្ឋកិច្ចដ៍សំខាន់មួយក្នុងប្រទេសកម្ពុជា ។ ដោយសារខេត្តនេះសំបូរប្រាសាទបុរាណ និងរមនីយដ្ឋានខេត្តនេះអាចទាក់ទាញភ្ញៀវទេសចរណ៍ជាតិ និងអន្តរជាតិបានយ៉ាងច្រើន ។ ត្រូវបានទទួលស្គាលដោយរាជរដ្ឋាភិ-បាលកម្ពុជាតាមរយៈអនុក្រិតលេខ ៦៣អនក្រ.បក ចុះហត្ថលេខាដោយនាយករដ្ឋមន្រ្តី ហ៊ុន សែន ។ ក្រសួងអប់រំយុវជន និងកីឡាបានទទួលស្គាល់តាមប្រកាសលេខ ៨០២ ចុះថ្ងៃទី ០៩ ខែកក្កដា ឆ្នាំ ២០០៧ ។ទទួលបានការទទួលស្គាល់ពីគណៈកម្មាធិការទទួលស្គាល់គុណភាពអប់រំនៃកម្ពុជាពីរលើកជាប់ៗគ្នាគឺឆ្នាំ ២០០៦-២០០៩ និងឆ្នាំ ២០១០-២០១៣ ។មាននិស្សិតចុះឈ្មោះចូលរៀនថ្នាក់បរិញ្ញាបត្រលើកដំបូងចំនួន ៦០០ នាក់ ហើយបច្ចុប្បន្នមាននិស្សិតសរុបចំនួន ២៩៨០ នាក់ ។និស្សិតថ្នាក់បរិញ្ញាបត្រចំនួន ២៧៨០ នាក់ និងនិស្សិតបរិញ្ញាបត្រជាន់ខ្ពស់ចំនួន ២០០នាក់ ។មហាវិទ្យាល័យ ៣ ដែលពេញនិយមជាងគេរួមមាន មហាវិទ្យាល័យសេដ្ឋកិច្ចពាណិជ្ជកម្ម និងទេសចរណ៍ មហាវិទ្យាល័យ សិល្បៈ មនុស្សសាស្រ្ត និងភាសា និងមហាវិទ្យាល័យ វិទ្យាសាស្រ្ត និងបច្ចេកវិទ្យា ។អាត្រានិស្សិតមានការងារធ្វើគឺ ៩៥% ។"</string>
    <string name="LegalDetail">"១. ចក្ខុវិស័យ (VISION) សាកលវិទ្យាល័យ សៅស៍អ៊ីសថ៍អេយសៀ នឹងអភិវឌ្ឍធនធានមនុស្សប្រកបដោយសមត្ថភាពមានគុណធម៌ និងឥរិយាបថល្អឆ្លើយតបទៅនឹងទីផ្សារការងារជាតិ និងអន្តរជាតិ ដែលពួកគេអាចធ្វើការងារ និងរស់នៅក្នុងយុគសម័យសាកលភាវូបនីយកម្ម ដើម្បីរួមចំណែកកសាងសង្គមជាតិ ។
២. បេសកកម្ម (MISSION)
     សាកលវិទ្យាល័យ សៅស៍អ៊ីសថ៍អេសៀ កសាងប្រព័ន្ធអប់រំឧត្តមសិក្សា និងប្រព័ន្ធអប់រំបណ្តុះបណ្តាលបច្ចេកទេសនិងវិជ្ជាជីវៈគ្រប់កម្រិតសិក្សាស្របតាមស្តង់ដារជាតិ និងអន្តរជាតិ ដើម្បីផ្តល់ចំណេះដឹង ចំណេះធ្វើ ជំនាញផ្នែករឹង(Technical Skills) ជំនាញផែ្នកទន់(Soft Skills) និងឥរិយាបថដល់អ្នកសិក្សាឆ្លើយតបទៅនឹងតម្រូវការទីផ្សារការងារជាតិ និងអន្តរជាតិ ។

៣. ទស្សនៈអបរំ (Education of Philosophy)
     ជីវិតអ្នកកាន់តែជោគជ័យជាមួយសាកលវិទ្យាល័យ សៅស៍អ៊ីសថ៍អេយសៀ (Your life more successful with University of South-East Asia) ។

៤. គុណតម្លៃ (CORE VALUE)
៤.១- ចំណេះដឹង (Knowledge)
ចូលចិត្តរៀន និងស្រាវជ្រាវពេញមួយជីវិត
មានចំណេះដឹងទូលំទូលាយ
មានចំណេះដឹងភាសាបរទេសអាចប្រើប្រាស់បានជាផ្លូវការ
មានទំនុកចិត្តលើខ្លួនឯង ។

៤.២- ជំនាញ (Skills)
អាចប្រើប្រាស់បច្ចេកវិទ្យាព័ត៌មានវិទ្យាយ៉ាងស្ទាត់ជំនាញ
មានជំនាញផ្នែករឹង (Technical Skills)
មានជំនាញផ្នែកទន់ (Soft skills)
នវានុវត្តភាព និងការបង្កើតថ្មី (Innovation and Creativity) ។

៤.៣- ឧត្តមភាព (Excellence)
មានការប្តេជ្ញាចិត្តខ្ពស់ និងការទទួលខុសត្រូវក្នុងការអនុវត្តការងារ
មានការប្តេជ្ញាចិត្តខ្ពស់ និងការទទួលខុសត្រូវក្នុងការបង្រៀន
មានការប្តេជ្ញាចិត្តខ្ពស់ និងការទទួលខុសត្រូវក្នុងការសិក្សា និងស្រាវជ្រាវ
មានសុច្ចរិតភាព គុណធម៌ គណនេយ្យភាព ការប្រាស្រ័យទាក់ទងបើកចំហ និងចេះធ្វើការជាក្រុម ។

៤.៤- សង្គម  (Social)
មានមនសិកាជាតិ (National Consciousness
ចូលរួមសកម្មភាពសង្គម (Social Activities)
ថែរក្សា និងការពារវប្បធម៌ ទំនៀមទំលាប់ប្រពៃណីជាតិ (Culture)
ថែរក្សា និងការពារបរិស្ថាន (Environment) ។

៥ គោលដៅ  (Goal &amp; Objective)
ការគ្រប់គ្រង និងអភិបាលកិច្ចល្អ
ការលើកកម្ពស់គុណភាពអប់រំកម្រិតស្តង់ដាជាតិ និងអន្តរជាតិ
ការលើកកម្ពស់ការស្រាវជ្រាវ និងការអភិវឌ្ឍ
ការទំនាក់ទំនង និងសហប្រតិបត្តិការអន្តរជាតិ
ការទទួលស្គាល់គុណភាពអប់រំថ្នាក់ជាតិ និងអន្តរជាតិ ។"</string>
    <string name="Log_out_message">តើអ្នកពិតជាចង់ចាកចេញពីគណនីមែនឬទេ?</string>
    <string name="Cancel">បោះបង់</string>
    <string name="No">លេខរៀង</string>
    <string name="Total">សរុប</string>
    <string name="GuestEvent">ព្រឹត្តិការណ៍</string>
    <string name="GuestRegistration">ការចុះឈ្មោះ</string>
    <string name="Score">ពិន្ទុ</string>
    <string name="Semester">ឆមាស</string>
    <string name="Rank">ចំណាត់ថ្នាក់</string>
    <string name="Grade">លំដាប់ពិន្ទុ</string>
    <string name="ShowDetail">មើលលម្អិត</string>
    <string name="Schedule">កាលវិភាគ</string>
    <string name="Location_usea">ទល់មុខវិទ្យាល័យអង្គរ, ក្រុងសៀមរាប, ព្រះរាជាណាចក្រកម្ពុជា</string>
    <string name="leave_message">តើអ្នកពិតជាចង់ចាក់ចេញពីកម្មវិធីនេះឬ?</string>
    <string name="Professor">ឈ្មោះសាស្រ្តាចារ្យ</string>
    <string name="Lecture">សាស្រ្តាចារ្យ</string>
    <string name="Note">ចំណាំ</string>
    <string name="Instruction">ការណែនាំ</string>
    <string name="Click_Download">ចុចដើម្បីទាញយក</string>
    <string name="Nothing">គ្មាន</string>
    <string name="Comma">,</string>
    <string name="Day">ថ្ងៃ</string>
    <string name="Month">ខែ</string>
    <string name="Date">ទី</string>
    <string name="Year">ឆ្នាំ</string>
    <string name="Career_Require_Detail">test</string>
    <string name="Lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="Read_More">អានបន្ថែម</string>
    <string name="LogInWith">ចូលតាមរយៈ</string>
    <string name="RequestCode">ទាញយកលេខកូដ</string>
    <string name="Verify">បញ្ជាក់</string>
    <string name="CodeSentFailed">មិនបានទទួលលេខកូដ?</string>
    <string name="ReSentCode">ផ្ញើរលេខកូដម្តងទៀត</string>
    <string name="Input_phone_number">សូមបញ្ចូលលេខទូរស័ព្ទ</string>
    <string name="Verify_code">សូមបញ្ចូលលេខកូដបញ្ជាក់</string>
    <string name="Register_with_phone_number">ចូលប្រើដោយលេខទូរស័ព្ទ</string>
    <string name="Register_with_google_account">ចូលប្រើជាមួយ Google</string>
    <string name="app_license">©USEA 2022V.1.0</string>
    <string name="Application_open">Application open</string>
    <string name="Application_close">Last day for applications</string>
    <string name="Application_type">Application type</string>
    <string name="Application_required">Application required</string>
    <string name="Benefit_type">Benefit type</string>
    <string name="Full_benefit_detail">Full benefit detail</string>
    <string name="Citizenship_requirement">Citizenship requirement</string>
    <string name="Total_value">Total value</string>
    <string name="Application_study_areas">Application study areas</string>
    <string name="Learn_more">Learn more</string>
    <string name="How_to_apply">How to apply</string>
    <string name="University">មហាវិទ្យាល័យ</string>
    <string name="Institute">វិទ្យាស្ថាន</string>
    <string name="Social_law">វិទ្យាសាស្រ្ត សង្គម និងនិតិសាស្រ្ត</string>
    <string name="Economy_tourism">សេដ្ឋកិច្ច ពាណិជ្ជកម្ម និងទេសចរណ៍</string>
    <string name="Science_technology">វិទ្យាសាស្រ្ត និងបច្ចេកវិទ្យា</string>
    <string name="Psychology_education">សិល្បៈ មនុស្សសាស្ដ្រ និងការអប់រំ</string>
    <string name="Foreign_language">វិទ្យាស្ថានភាសាបរទេស</string>
    <string name="Register_Ass">ការចុះឈ្មោះចូលរៀនសម្រាប់ថ្នាក់បរិញ្ញាបត្ររង</string>
    <string name="Register_Bac">ការចុះឈ្មោះចូលរៀនសម្រាប់ថ្នាក់បរិញ្ញាបត្រ</string>
    <string name="Register_Mba">ការចុះឈ្មោះចូលរៀនសម្រាប់ថ្នាក់បរិញ្ញាបត្រជាន់ខ្ពស់</string>
    <string name="Due_guest_Date">ថ្ងៃផុតកំណត់</string>
    <string name="Career_Require">តម្រូវការ</string>
    <string name="Exercise">លំហាត់</string>
    <string name="Double_dot">:</string>
    <string name="Average">មធ្យមភាគ</string>
    <string name="Study_program">កម្មវិធីសិក្សា</string>
    <string name="Position">Position</string>
    <string name="Please_input_your_id">សូមបញ្ចូលអត្តលេខរបស់អ្នក</string>
    <string name="Please_input_your_pwd">សូមបញ្ចូលលេខសម្ងាត់របស់អ្នក</string>
    <string name="Please_input_student_account">សូមបញ្ចូលគណីនិស្សិត</string>
    <string name="OTP">សូមបញ្ចូលលេខកូដ</string>
    <string name="Photo">រូបភាព</string>
    <string name="No_data">មិនមានទិន្នន័យ</string>
    <string name="no_internet">មិនមានអ៊ីនធឺណិត</string>
    <string name="stage">វគ្គសិក្សា</string>


</resources>