<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".guest.guest_scholarship.Detail_guest_scholarship">

    <include
        android:id="@+id/CustomActionbarGuestScholarshipDetail"
        layout="@layout/custom_actionbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/khmer_os_battambang_regular"
            android:gravity="center"
            android:text="@string/school_name_kh"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:id="@+id/School_detail_scholarship_detail"
            android:text="@string/Lorem"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/Application_open"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/Date_scholarship_open_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/Sample_txt"
                android:textColor="@color/green" />

            <TextView
                android:id="@+id/Month_scholarship_open_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/Sample_txt"
                android:textColor="@color/green" />

            <TextView
                android:id="@+id/Year_scholarship_open_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/Sample_txt"
                android:textColor="@color/green" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/Application_close"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/Date_scholarship_close_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/Sample_txt"
                android:textColor="@color/green" />

            <TextView
                android:id="@+id/Month_scholarship_close_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/Sample_txt"
                android:textColor="@color/green" />

            <TextView
                android:id="@+id/Year_scholarship_close_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/Sample_txt"
                android:textColor="@color/green" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/Learn_more"
            android:id="@+id/Learn_more_scholarship_detail"
            android:textColor="@color/dark_blue" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/Application_type"
            android:textColor="@color/black" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:id="@+id/Application_required_scholarship_detail"
            android:text="@string/Application_required"
            android:textColor="@color/green" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/How_to_apply"
            android:id="@+id/How_to_apply_scholarship_detail"
            android:textColor="@color/dark_blue" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/Benefit_type"
            android:textColor="@color/black" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/Benefit_type"
            android:id="@+id/Benefit_type_scholarship_detail"
            android:textColor="@color/green" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/Full_benefit_detail"
            android:id="@+id/Full_benefit_detail_scholarship_detail"
            android:textColor="@color/dark_blue" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/Citizenship_requirement"
            android:textColor="@color/black" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:id="@+id/Citizenship_requirement_scholarship_detail"
            android:text="@string/Citizenship_requirement"
            android:textColor="@color/green" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/Total_value"
            android:textColor="@color/black" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:id="@+id/Total_value_scholarship_detail"
            android:text="@string/Total_value"
            android:textColor="@color/green" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/Application_study_areas"
            android:textColor="@color/black" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:id="@+id/Application_study_areas_scholarship_detail"
            android:text="@string/Application_study_areas"
            android:textColor="@color/green" />
    </LinearLayout>
    <TextView
        android:id="@+id/Detail_title_scholarship_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>
</LinearLayout> 