<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@color/pink_40"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:fontFamily="@font/khmer_os_battambang_regular"
            android:gravity="center|start"
            android:text="@string/Semester1"
            android:textColor="@color/black"
            android:paddingStart="15dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:fontFamily="@font/khmer_os_battambang_regular"
            android:gravity="center"
            android:text="@string/Rank"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:fontFamily="@font/khmer_os_battambang_regular"
            android:gravity="center"
            android:text="@string/Grade"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:fontFamily="@font/khmer_os_battambang_regular"
            android:gravity="center"
            android:text="@string/Total"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>