<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@null"
            android:src="@drawable/usea_logo" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/khmer_os_moul"
            android:gravity="center"
            android:text="@string/school_name_kh"
            android:textColor="@color/dark_blue"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:text="@string/school_name_en"
            android:textColor="@color/dark_blue"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/khmer_os_battambang_regular"
            android:gravity="center"
            android:text="@string/Account"
            android:textColor="@color/dark_blue"
            android:textSize="16sp" />

        <Button
            android:id="@+id/guest_account"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_ripple_effect"
            android:text="@string/guest"
            android:textSize="16sp" />

        <Button
            android:id="@+id/studentaccount"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_ripple_effect"
            android:text="@string/Student"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/app_license"
            android:textColor="@color/light_yellow" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>