<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".STUDENT.Login.StudentLogin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="@null"
            android:src="@drawable/usea_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/khmer_os_moul"
            android:gravity="center"
            android:text="@string/school_name_kh"
            android:textColor="@color/dark_blue"
            android:textSize="16sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:text="@string/school_name_en"
            android:textColor="@color/dark_blue"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/khmer_os_battambang_regular"
            android:gravity="center"
            android:text="@string/Please_input_student_account"
            android:textColor="@color/dark_blue"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/khmer_os_battambang_regular"
            android:text="@string/StudentID"
            android:textColor="@color/dark_blue"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/usernameLogIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/edit_text_state"
            android:fontFamily="@font/khmer_os_battambang_regular"
            android:hint="@string/StudentID"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/St_id_txt_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/khmer_os_battambang_regular"
            android:text="@string/Please_input_your_id"
            android:textColor="@color/red"
            android:textSize="14sp"
            android:visibility="gone" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/khmer_os_battambang_regular"
            android:text="@string/password"
            android:textColor="@color/dark_blue"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/passwordLogIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/edit_text_state"
            android:fontFamily="@font/khmer_os_battambang_regular"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLength="10"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/St_pwd_txt_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/khmer_os_battambang_regular"
            android:text="@string/Please_input_your_pwd"
            android:textColor="@color/red"
            android:textSize="14sp"
            android:visibility="gone" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_ripple_effect"
            android:fontFamily="@font/khmer_os_battambang_regular"
            android:text="@string/Log_In"
            android:textSize="16sp" />

    </LinearLayout>
</LinearLayout>